--- a/app/Resources/views/flight/show.html.twig
+++ b/app/Resources/views/flight/show.html.twig
@@ -22,6 +22,10 @@
                 <td>{{ flight.pilot }}</td>
             </tr>
             <tr>
+                <th>Plane</th>
+                <td>{{ flight.plane }}</td>
+            </tr>
+            <tr>
                 <th>Freeseats</th>
                 <td>{{ flight.freeSeats }}</td>
             </tr>
